--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/devicesoftwarevalidationresult_list.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/devicesoftwarevalidationresult_list.html
@@ -1,4 +1,4 @@
-{% extends 'generic/object_list.html' %}
+{% extends "generic/object_list.html" %}
 {% block header %}
     <div class="row noprint">
         <div class="col-sm-12 col-md-12">
@@ -8,5 +8,5 @@
             </ol>
         </div>
     </div>
-{% endblock %}
-{% block title %}Device Software Validation List{% endblock %}
+{% endblock header %}
+{% block title %}Device Software Validation List{% endblock title %}
