--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/hardwarelcm_delete.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/hardwarelcm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load form_helpers %}
 
 {% block content %}
@@ -19,4 +19,4 @@
         </form>
 	</div>
 </div>
-{% endblock %} 
+{% endblock content %}
