--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/hardwarenotice_device_report.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/hardwarenotice_device_report.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load buttons %}
 {% load static %}
 {% load helpers %}
@@ -20,7 +20,7 @@
     {% export_button content_type %}
 {% endif %}
 </div>
-    <h1>{% block title %}Device Hardware Notice Reports{% endblock %}</h1>
+    <h1>{% block title %}Device Hardware Notice Reports{% endblock title %}</h1>
     <div class="row">
         <div class="col-md-9">
             <!-- VISUAL BLOCK -->
@@ -30,11 +30,11 @@
             <h4 class="text-left alert-info p-4 m-4">Last full run of the report: {{ report_last_run }} - {{ report_last_run|timesince }} ago </h4>
             {% endif %}
             {% if bar_chart is not None %}
-                {% block graphic  %}
+                {% block graphic %}
                     <div id="content">
                         <img src="data:image/png;base64,{{ bar_chart|safe }}" style="width:100%" alt="Platform Bar Chart">
                     </div>
-                {% endblock %}
+                {% endblock graphic %}
             {% else %}
                     <span class="text-center alert-danger p-4 m-4">-- Can't generate visualization, no config validation found. --</span>
             {% endif %}
@@ -55,7 +55,7 @@
                 <tbody>
                     <tr class="even">
                         <td>
-                            <a href="/plugins/nautobot-device-lifecycle-mgmt/device-hardware-notice-result/">
+                            <a href='{% url "plugins:nautobot_device_lifecycle_mgmt:devicehardwarenoticeresult_list" %}'>
                                 Devices
                             </a>
                         </td>
@@ -63,12 +63,12 @@
                             {% if device_aggr.total is not None %} {{ device_aggr.total }} {% else %} -- {% endif %}
                         </td>
                         <td>
-                            <a href="/plugins/nautobot-device-lifecycle-mgmt/device-hardware-notice-result/?&supported=True">
+                            <a href='{% url "plugins:nautobot_device_lifecycle_mgmt:devicehardwarenoticeresult_list" %}?supported=True'>
                                 {% if device_aggr.valid is not None %} {{ device_aggr.valid }} {% else %} -- {% endif %}
                             </a>
                         </td>
                         <td>
-                            <a href="/plugins/nautobot-device-lifecycle-mgmt/device-hardware-notice-result/?&supported=False">
+                            <a href='{% url "plugins:nautobot_device_lifecycle_mgmt:devicehardwarenoticeresult_list" %}?supported=False'>
                                 {% if device_aggr.invalid is not None %} {{ device_aggr.invalid }} {% else %} -- {% endif %}
                             </a>
                         </td>
@@ -79,7 +79,7 @@
                             </a>
                         </td>
                         <td>
-                            <a href="/api/plugins/nautobot-device-lifecycle-mgmt/device-hardware-notice-result/?format=csv"
+                            <a href='{% url "plugins-api:nautobot_device_lifecycle_mgmt-api:devicehardwarenoticeresult-list" %}?format=csv'
                                 class="btn btn-default btn-xs" title="Export data for all device types" aria-hidden="true"> 
                                 <i class="mdi mdi-download"></i>
                             </a>
@@ -88,14 +88,14 @@
                 </tbody>
             </table>
             <h3 class="text-center m-2 p-3">Device Type Summary</h3>
-            {% include 'utilities/obj_table.html' %}
+            {% include "utilities/obj_table.html" %}
             </div>
         <div class="col-md-3 noprint">
-        {% include 'inc/search_panel.html' %}
+        {% include "inc/search_panel.html" %}
     </div>
 </div>
 {% table_config_form table table_name="ObjectTable" %}
-{% endblock %}
+{% endblock content %}
 {% block javascript %}
 <script src="{% static 'js/tableconfig.js' %}"></script>
-{% endblock %}
+{% endblock javascript %}
