--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/contract_info.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/contract_info.html
@@ -3,7 +3,7 @@
 <div class="row">
     {% if contracts_table %}
     <div class="col-md-12">
-        {% include 'panel_table.html' with table=contracts_table heading='Contracts' panel_class="panel panel-default" %}
+        {% include "panel_table.html" with table=contracts_table heading="Contracts" panel_class="panel panel-default" %}
     </div>
     {% endif %}
 </div>
