--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_devices_tab.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_devices_tab.html
@@ -1,4 +1,4 @@
-{% extends 'generic/object_retrieve.html' %}
+{% extends "generic/object_retrieve.html" %}
 {% load helpers %}
 {% load static %}
 
@@ -23,4 +23,4 @@
         </tr>
     </table>
 </div>
-{% endblock %}
+{% endblock content %}
