--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_edit.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_edit.html
@@ -1,10 +1,10 @@
-{% extends 'generic/object_edit.html' %}
+{% extends "generic/object_edit.html" %}
 {% load static %}
 {% load form_helpers %}
 {% load helpers %}
 
 {% block form %}
-    {% block pre_form %}{% endblock %}
+    {% block pre_form %}{% endblock pre_form %}
     <div class="panel panel-default">
         <div class="panel-heading"><strong>Attributes</strong></div>
         <div class="panel-body">
@@ -43,5 +43,5 @@
             </div>
         </div>
     </div>
-    {% include 'inc/extras_features_edit_form_fields.html' %}
-{% endblock %}
+    {% include "inc/extras_features_edit_form_fields.html" %}
+{% endblock form %}
