--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_list.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_list.html
@@ -1,3 +1,3 @@
-{% extends 'generic/object_list.html' %}
+{% extends "generic/object_list.html" %}
 
-{% block title %}Validated Software List{% endblock %}
+{% block title %}Validated Software List{% endblock title %}
