--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_retrieve.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_retrieve.html
@@ -1,4 +1,4 @@
 {% extends 'generic/object_retrieve.html' %}
 {% block masthead %}
-    <h2>{% block title %}{{ object }}{% endblock %}</h2>
+    <h2>Validated Software: {% block title %}{{ object }}{% endblock title %}</h2>
 {% endblock masthead %}
