--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/devicehardwarenoticeresult_list.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/devicehardwarenoticeresult_list.html
@@ -1,10 +1,10 @@
 {% extends "generic/object_list.html" %}
 {% block header %}
-    <div class="row noprint">
-        <div class="col-sm-12 col-md-12">
+    <div class="row d-print-none">
+        <div class="col-md-12 col-lg-12">
             <ol class="breadcrumb">
-                <li><a href="{% url 'plugins:nautobot_device_lifecycle_mgmt:hardwarenotice_device_report_list' %}">Device Hardware Notice Reports</a></li>
-                <li><a>{{ object }}</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'plugins:nautobot_device_lifecycle_mgmt:hardwarenotice_device_report_list' %}">Device Hardware Notice Reports</a></li>
+                <li class="breadcrumb-item"><a>{{ object }}</a></li>
             </ol>
         </div>
     </div>
