--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/hardwarelcm_delete.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/hardwarelcm_delete.html
@@ -3,16 +3,16 @@
 
 {% block content %}
 <div class="row">
-	<div class="col-md-6 col-md-offset-3">
+	<div class="col-lg-6 offset-lg-3">
         <form action="" method="post" class="form">
             {% csrf_token %}
-            <div class="panel panel-{{ panel_class|default:"danger" }}">
-                <div class="panel-heading">Delete Hardware Notice?</div>
-                <div class="panel-body">
+            <div class="card panel-{{ panel_class|default:"danger" }}">
+                <div class="card-header">Delete Hardware Notice?</div>
+                <div class="card-body">
                     <p>Are you sure you want to delete Hardware Notice <strong>{{ object }}</strong>?</p>
-                    <div class="text-right">
+                    <div class="text-end">
                         <button type="submit" name="_confirm" class="btn btn-{{ button_class|default:"danger" }}">Confirm</button>
-                        <a href="{% url 'plugins:nautobot_device_lifecycle_mgmt:hardwarelcm' pk=notice.pk %}" class="btn btn-default">Cancel</a>
+                        <a href="{% url 'plugins:nautobot_device_lifecycle_mgmt:hardwarelcm' pk=notice.pk %}" class="btn btn-secondary">Cancel</a>
                     </div>
                 </div>
             </div>
