--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/general_notice.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/general_notice.html
@@ -1,12 +1,12 @@
 {% load helpers %}
 {% if perms.nautobot_device_lifecycle_mgmt.view_hardwarelcm and hw_notices %}
 {% for notice in hw_notices %}
-        <div class="panel panel-default">
-            <div class="panel-heading">
+        <div class="card">
+            <div class="card-header">
                 <strong>Hardware {% if notice.inventory_item %}Inventory Part {% endif %}Notice</strong>
-                {% if notice.expired %}<span class="label label-danger">Expired</span>{% endif %}
+                {% if notice.expired %}<span class="badge bg-danger">Expired</span>{% endif %}
             </div>
-            <table class="table table-hover panel-body attr-table">
+            <table class="table table-hover card-body attr-table">
                 <tr>
                     <td>Name</td>
                     <td>
