--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/software_info.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/software_info.html
@@ -1,10 +1,10 @@
 {% if perms.dcim.view_softwareversion %}
 {% if object.software_version %}
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <strong>Software</strong> {% if obj_soft_valid %}<span class="label label-success">Valid{% else %}<span class="label label-danger">Invalid{% endif %}</span>
+        <div class="card">
+            <div class="card-header">
+                <strong>Software</strong> {% if obj_soft_valid %}<span class="badge bg-success">Valid{% else %}<span class="badge bg-danger">Invalid{% endif %}</span>
             </div>
-            <table class="table table-hover panel-body attr-table">
+            <table class="table table-hover card-body attr-table">
                 <tr>
                     <td>Name</td>
                     <td>
