--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/validated_report_actions.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/validated_report_actions.html
@@ -1,12 +1,12 @@
 {% if record %}
     {% if record.device__device_type__model %}
         <a href='{% url "plugins-api:nautobot_device_lifecycle_mgmt-api:devicesoftwarevalidationresult-list" %}?device_type={{ record.device__device_type__model }}&format=csv'
-        class="btn btn-default btn-xs" title="Export data for device type" aria-hidden="true"> 
+        class="btn btn-secondary btn-sm" title="Export data for device type" aria-hidden="true"> 
         <i class="mdi mdi-download"></i>
         </a>
     {% elif record.inventory_item__part_id %}
         <a href='{% url "plugins-api:nautobot_device_lifecycle_mgmt-api:inventoryitemsoftwarevalidationresult-list" %}?part_id={{ record.inventory_item__part_id }}&format=csv'
-        class="btn btn-default btn-xs" title="Export data for device type" aria-hidden="true"> 
+        class="btn btn-secondary btn-sm" title="Export data for device type" aria-hidden="true"> 
         <i class="mdi mdi-download"></i>
         </a>
     {% endif %}
