--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftware_device_report.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftware_device_report.html
@@ -4,17 +4,17 @@
 {% load helpers %}
 
 {% block content %}
-<div class="pull-right noprint">
+<div class="float-end d-print-none">
 <div class="btn-group">
-    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <span class="mdi mdi-plus-thick" aria-hidden="true"></span>Execute<span class="caret"></span>
+    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <span class="mdi mdi-plus-thick" aria-hidden="true"></span>Execute<span class="mdi mdi-chevron-down"></span>
     </button>
     <ul class="dropdown-menu">
             <li><a href="{% url 'extras:job_run_by_class_path' class_path='nautobot_device_lifecycle_mgmt.jobs.lifecycle_reporting.DeviceSoftwareValidationFullReport' %}">Run Software Validation</a></li>
     </ul>
 </div>
 {% if request.user.is_authenticated and table_config_form %}
-    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#ObjectTable_config" title="Configure table"><i class="mdi mdi-cog"></i>Configure</button>
+    <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#ObjectTable_config" title="Configure table"><i class="mdi mdi-cog"></i>Configure</button>
 {% endif %}
 {% if request.user.is_authenticated and 'export' in action_buttons %}
     {% export_button content_type %}
@@ -22,12 +22,12 @@
 </div>
     <h1>{% block title %}Device Software Validation Reports{% endblock title %}</h1>
     <div class="row">
-        <div class="col-md-9">
+        <div class="col-lg-9">
             <!-- VISUAL BLOCK -->
             {% if report_last_run is None %}
                 <h4 class="text-center alert-danger p-4 m-4">-- No validation results found, you need to run the report at least once before seeing the results! --</h4>
             {% else %}
-            <h4 class="text-left alert-info p-4 m-4">Last full run of the report: {{ report_last_run }} - {{ report_last_run|timesince }} ago </h4>
+            <h4 class="text-start alert-info p-4 m-4">Last full run of the report: {{ report_last_run }} - {{ report_last_run|timesince }} ago </h4>
             {% endif %}
             {% if bar_chart is not None %}
                 {% block graphic %}
@@ -40,7 +40,7 @@
             {% endif %}
             <!-- END VISUAL BLOCK -->
             <h3 class="text-center m-2 p-3">Executive Summary</h3>
-            <table class="table table-hover table-headings">
+            <table class="table table-hover nb-table-headings">
                 <thead>
                     <tr>
                         <th><a>Type</a></th>
@@ -88,7 +88,7 @@
                         </td>
                         <td>
                             <a href='{% url "plugins-api:nautobot_device_lifecycle_mgmt-api:devicesoftwarevalidationresult-list" %}?format=csv'
-                                class="btn btn-default btn-xs" title="Export data for all device types" aria-hidden="true"> 
+                                class="btn btn-secondary btn-sm" title="Export data for all device types" aria-hidden="true"> 
                                 <i class="mdi mdi-download"></i>
                             </a>
                         </td>
@@ -98,7 +98,7 @@
             <h3 class="text-center m-2 p-3">Device Type Summary</h3>
             {% include "utilities/obj_table.html" %}
             </div>
-        <div class="col-md-3 noprint">
+        <div class="col-lg-3 d-print-none">
         {% include "inc/search_panel.html" %}
     </div>
 </div>
