--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_edit.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_edit.html
@@ -5,27 +5,27 @@
 
 {% block form %}
     {% block pre_form %}{% endblock pre_form %}
-    <div class="panel panel-default">
-        <div class="panel-heading"><strong>Attributes</strong></div>
-        <div class="panel-body">
+    <div class="card">
+        <div class="card-header"><strong>Attributes</strong></div>
+        <div class="card-body">
             {% render_field form.software %}
             {% render_field form.start %}
             {% render_field form.end %}
             {% render_field form.preferred %}
         </div>
     </div>
-    <div class="panel panel-default">
-        <div class="panel-heading"><strong>Objects Assigned To</strong></div>
-        <div class="panel-body">
+    <div class="card">
+        <div class="card-header"><strong>Objects Assigned To</strong></div>
+        <div class="card-body">
             <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active">
-                    <a href="#assigned_to_devices" role="tab" data-toggle="tab">Devices</a>
+                <li role="presentation" class="nav-item">
+                    <a class="nav-link active" href="#assigned_to_devices" role="tab" data-bs-toggle="tab">Devices</a>
                 </li>
-                <li role="presentation">
-                    <a href="#assigned_to_inventory_items" role="tab" data-toggle="tab">Inventory Items</a>
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link" href="#assigned_to_inventory_items" role="tab" data-bs-toggle="tab">Inventory Items</a>
                 </li>
-                <li role="presentation">
-                    <a href="#assigned_to_tags" role="tab" data-toggle="tab">Object Tags</a>
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link" href="#assigned_to_tags" role="tab" data-bs-toggle="tab">Object Tags</a>
                 </li>
             </ul>
             <div class="tab-content">
