Rename edit to create in templates
The custom edit templates were not being called. Also fixes the tabs to work with Bootstrap 5.

--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/hardwarelcm_create.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/hardwarelcm_create.html
@@ -6,21 +6,21 @@
 {% block form %}
 {% block pre_form %}{% endblock pre_form %}
 <div class="card">
-    <div class="card-header"><strong>Assign To</strong></div>
-    <div class="card-body">
-        <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="nav-item">
+    <div class="card-header"><strong>Assign To</strong>
+        <ul class="nav nav-tabs card-header-tabs" role="tablist">
+            <li class="nav-item" role="presentation">
                 <a class="nav-link active" href="#device_type" role="tab" data-bs-toggle="tab">Device Type</a>
             </li>
             <li class="nav-item" role="presentation">
                 <a class="nav-link" href="#inventory_item" role="tab" data-bs-toggle="tab">Inventory Item</a>
             </li>
-        </ul>
+    </div>
+    <div class="card-body">
         <div class="tab-content">
-            <div class="tab-pane active" id="device_type">
+            <div role="tabpanel" class="tab-pane active" id="device_type">
                 {% render_field form.device_type %}
             </div>
-            <div class="tab-pane" id="inventory_item">
+            <div role="tabpanel" class="tab-pane" id="inventory_item">
                 {% render_field form.inventory_item %}
             </div>
         </div>
