--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_create.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_create.html
@@ -15,10 +15,9 @@
         </div>
     </div>
     <div class="card">
-        <div class="card-header"><strong>Objects Assigned To</strong></div>
-        <div class="card-body">
-            <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="nav-item">
+        <div class="card-header"><strong>Objects Assigned To</strong>
+            <ul class="nav nav-tabs card-header-tabs" role="tablist">
+                <li class="nav-item" role="presentation">
                     <a class="nav-link active" href="#assigned_to_devices" role="tab" data-bs-toggle="tab">Devices</a>
                 </li>
                 <li class="nav-item" role="presentation">
@@ -28,16 +27,18 @@
                     <a class="nav-link" href="#assigned_to_tags" role="tab" data-bs-toggle="tab">Object Tags</a>
                 </li>
             </ul>
+        </div>
+        <div class="card-body">
             <div class="tab-content">
-                <div class="tab-pane active" id="assigned_to_devices">
+                <div role="tabpanel" class="tab-pane active" id="assigned_to_devices">
                     {% render_field form.devices %}
                     {% render_field form.device_types %}
                     {% render_field form.device_roles %}
                 </div>
-                <div class="tab-pane" id="assigned_to_inventory_items">
+                <div role="tabpanel" class="tab-pane" id="assigned_to_inventory_items">
                     {% render_field form.inventory_items %}
                 </div>
-                <div class="tab-pane" id="assigned_to_tags">
+                <div role="tabpanel" class="tab-pane" id="assigned_to_tags">
                     {% render_field form.object_tags %}
                 </div>
             </div>
