--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/validatedsoftware_info.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/validatedsoftware_info.html
@@ -3,7 +3,7 @@
 {% if validsoft_table %}
 <div class="row">
     <div class="col-lg-12">
-        {% include "panel_table.html" with table=validsoft_table heading="Validated Software matching this object" panel_class="card" %}
+        {% include "panel_table.html" with table=validsoft_table heading="Validated Software matching this object" %}
     </div>
 </div>
 {% endif %}
