--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/hardwarelcm_create.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/hardwarelcm_create.html
@@ -5,30 +5,30 @@
 
 {% block form %}
 {% block pre_form %}{% endblock pre_form %}
-<div class="panel panel-default">
-    <div class="panel-heading"><strong>Assign To</strong></div>
-    <div class="panel-body">
-        <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active">
-                <a href="#device_type" role="tab" data-toggle="tab">Device Type</a>
+<div class="card">
+    <div class="card-header"><strong>Assign To</strong>
+        <ul class="nav nav-tabs card-header-tabs" role="tablist">
+            <li class="nav-item" role="presentation">
+                <a class="nav-link active" href="#device_type" role="tab" data-bs-toggle="tab">Device Type</a>
             </li>
-            <li role="presentation">
-                <a href="#inventory_item" role="tab" data-toggle="tab">Inventory Item</a>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link" href="#inventory_item" role="tab" data-bs-toggle="tab">Inventory Item</a>
             </li>
-        </ul>
+    </div>
+    <div class="card-body">
         <div class="tab-content">
-            <div class="tab-pane active" id="device_type">
+            <div role="tabpanel" class="tab-pane active" id="device_type">
                 {% render_field form.device_type %}
             </div>
-            <div class="tab-pane" id="inventory_item">
+            <div role="tabpanel" class="tab-pane" id="inventory_item">
                 {% render_field form.inventory_item %}
             </div>
         </div>
     </div>
 </div>
-<div class="panel panel-default">
-    <div class="panel-heading"><strong>Attributes</strong></div>
-    <div class="panel-body">
+<div class="card">
+    <div class="card-header"><strong>Attributes</strong></div>
+    <div class="card-body">
         {% render_field form.release_date %}
         {% render_field form.end_of_sale %}
         {% render_field form.end_of_support %}
