--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/contract_info.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/contract_info.html
@@ -2,8 +2,8 @@
 {% if perms.nautobot_device_lifecycle_mgmt.view_contractlcm %}
 <div class="row">
     {% if contracts_table %}
-    <div class="col-md-12">
-        {% include "panel_table.html" with table=contracts_table heading="Contracts" panel_class="panel panel-default" %}
+    <div class="col-lg-12">
+        {% include "panel_table.html" with table=contracts_table heading="Contracts" %}
     </div>
     {% endif %}
 </div>
