--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/device_notice.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/device_notice.html
@@ -16,10 +16,11 @@
                     {% for notice in hw_notices|slice:":5" %}
                     <tbody>
                         <tr>
-                            <th colspan="2">
-                                <button type="button" class="btn-link nb-collapse-toggle mdi mdi-chevron-right"
+                            <td class="position-relative" colspan="2">
+                                <button type="button" class="btn float-none fs-4 fw-medium stretched-link nb-collapse-toggle"
                                         name="hardware-notices-accordion-{{ forloop.counter }}" data-bs-toggle="collapse"
                                         data-bs-target=".collapseme-hardware-notices-accordion-{{ forloop.counter }}">
+                                    <span aria-hidden="true" class="mdi mdi-chevron-down me-4"></span>
                                     {{ notice }}
                                 </button>
                                 {% if notice.expired %}
@@ -27,31 +28,29 @@
                                 {% endif %}
                             </th>
                         </tr>
-                    </tbody>
-                    <tbody class="collapse collapseme-hardware-notices-accordion-{{ forloop.counter }}">
-                        <tr>
+                        <tr class="collapse collapseme-hardware-notices-accordion-{{ forloop.counter }} nb-transition-none">
                             <td>End of Sale</td>
                             <td>{{ notice.end_of_sale|placeholder }}</td>
                         </tr>
-                        <tr>
+                        <tr class="collapse collapseme-hardware-notices-accordion-{{ forloop.counter }} nb-transition-none">
                             <td>End of Support</td>
                             <td>{{ notice.end_of_support|placeholder }}</td>
                         </tr>
-                        <tr>
+                        <tr class="collapse collapseme-hardware-notices-accordion-{{ forloop.counter }} nb-transition-none">
                             <td>End of Software Releases</td>
                             <td>{{ notice.end_of_sw_releases|placeholder }}</td>
                         </tr>
-                        <tr>
+                        <tr class="collapse collapseme-hardware-notices-accordion-{{ forloop.counter }} nb-transition-none">
                             <td>End of Security Patches</td>
                             <td>{{ notice.end_of_security_patches|placeholder }}</td>
                         </tr>
-                        <tr>
+                        <tr class="collapse collapseme-hardware-notices-accordion-{{ forloop.counter }} nb-transition-none">
                             <td>Documentation URL</td>
                             <td>
                                 {% if notice.documentation_url %}<a href="{{ notice.documentation_url }}">{{ notice.documentation_url }}</a>{% else %}{{ None|placeholder }}{% endif %}
                             </td>
                         </tr>
-                        <tr>
+                        <tr class="collapse collapseme-hardware-notices-accordion-{{ forloop.counter }} nb-transition-none">
                             <td>Comments</td>
                             <td>
                                 {% if notice.comments %}<pre>{{ notice.comments }}</pre>{% else %}{{ None|placeholder }}{% endif %}
